kustomize/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw4-prod
  labels:
    training: block4
