kustomize/overlays/prod/patch-replicacount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
spec:
  replicas: 2
